Corrected the placement of and spacing of the popup in transactions/ and removed the transition of the opacity in the begining of the program.

--- a/transactions/styles2.css
+++ b/transactions/styles2.css
@@ -153,18 +153,17 @@ h1 {
     z-index: 999;
     opacity: 0%;
     position: fixed;
-    top: 27%;
+    top: 250px;
     left: 50%;
     transform: translate(-50%, -50%); 
     width: 80%;
-    height: 20%;
+    height: 180px;
     background-color: white;
     padding: 10px 25px;
     background-color: rgb(243, 243, 243);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    transition: opacity 0.3s ease;
 }
 
 #popup h1 {
